2011-10-07  Gavin Barraclough  <barraclough@apple.com>

        DFG JIT: callOperation should return the Call.
        https://bugs.webkit.org/show_bug.cgi?id=69682

        Reviewed by Oliver Hunt.

        * dfg/DFGJITCodeGenerator.h:
        (JSC::DFG::callOperation):
        (JSC::DFG::appendCallWithExceptionCheckSetResult):
        * dfg/DFGJITCompiler.h:
        (JSC::DFG::JITCompiler::appendCall):
        * wtf/Platform.h:

2011-10-10  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r97045.
        http://trac.webkit.org/changeset/97045
        https://bugs.webkit.org/show_bug.cgi?id=69746

        makes apple bots very crashy :( (Requested by kling on
        #webkit).

        * config.h:

2011-10-10  Andreas Kling  <kling@webkit.org>

        Shrink BorderValue.
        https://bugs.webkit.org/show_bug.cgi?id=69521

        Reviewed by Antti Koivisto.

        * config.h: Touch to force full rebuild.

2011-10-09  Yuqiang Xian  <yuqiang.xian@intel.com>

        Improve Null or Undefined test in 32_64 DFG
        https://bugs.webkit.org/show_bug.cgi?id=69734

        Reviewed by Darin Adler.

        Currently Null or Undefined value test in 32_64 DFG will check
        Null and Undefined tag separately and introduce one more branch.
        It can be improved in the way how the baseline JIT is doing - by
        relying on the fact that "UndefinedTag + 1 == NullTag and NullTag & 1".

        * dfg/DFGJITCodeGenerator32_64.cpp:
        (JSC::DFG::JITCodeGenerator::nonSpeculativeNonPeepholeCompareNull):
        * dfg/DFGSpeculativeJIT32_64.cpp:
        (JSC::DFG::SpeculativeJIT::compileObjectOrOtherLogicalNot):
        (JSC::DFG::SpeculativeJIT::emitObjectOrOtherBranch):

2011-10-09  Yuqiang Xian  <yuqiang.xian@intel.com>

        JSVALUE32_64 DFG JIT - Bug fix for ConvertThis
        https://bugs.webkit.org/show_bug.cgi?id=69721

        Reviewed by Darin Adler.

        * dfg/DFGSpeculativeJIT32_64.cpp: