@@ -1,3 +1,15 @@
+2011-10-10  Yuqiang Xian  <yuqiang.xian@intel.com>
+
+        JSVALUE32_64 DFG JIT - Bug fix for BranchNull
+        https://bugs.webkit.org/show_bug.cgi?id=69743
+
+        Reviewed by Darin Adler.
+
+        This fixes the error in access-binary-trees. All SunSpider cases passed.
+
+        * dfg/DFGJITCodeGenerator32_64.cpp:
+        (JSC::DFG::JITCodeGenerator::nonSpeculativePeepholeBranchNull):
+
 2011-10-07  Gavin Barraclough  <barraclough@apple.com>
 
         DFG JIT: callOperation should return the Call.
